poetry typing fix

--- a/_posts/2019-05-12-Grey-Day.markdown
+++ b/_posts/2019-05-12-Grey-Day.markdown
@@ -5,7 +5,7 @@ date:   2019-05-12 9:00
 ---
 It's a grey day. A sad day even.  
 Your mind is foggy, the grass is wet  
-only a few cards trickle by. Stuff to  
+only a few cars trickle by. Stuff to  
 do, but no desire to do them. The day  
 is made before you even step  
 outside with no sun shining on your  
